# ecs

./: .gitignore  CMakeLists.txt
include/: ComponentArray.hpp  ComponentManager.hpp  ECS.hpp  EntityManager.hpp  Mediator.hpp  System.hpp  SystemManager.hpp
src/: ComponentArray.cpp  ComponentManager.cpp  EntityManager.cpp  Mediator.cpp  SystemManager.cpp  main.cpp
